Increased contrast in notes. Resolved issue with language label overlapping code sample on mobiles. Added github icons at runtime to links to samples and libraries. Resolved issue with nav not selecting items which are interior links in a page.

--- a/styles/base.css
+++ b/styles/base.css
@@ -25,17 +25,18 @@ pre {
     position: relative;
 }
 
-pre>code {
+pre>code.hljs {
     box-shadow: 0 0 5px 2px #CCC;
     padding-top: 1em;
+    margin-top: 1.5em;
 }
 
 code::before {
     font-size: 0.8em;
     float: left;
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: -1.5em;
+    right: 0px;
 }
 
 code.vbs::before {
@@ -116,6 +117,7 @@ p.note {
     border: 1px solid #A6A6A6;
     position: relative;
     padding: 5px 10px 5px 30px;
+    color: black; /* increase contrast */
 }
 
 p.note::before {
