--- a/styles/external-links.css
+++ b/styles/external-links.css
@@ -4,6 +4,6 @@ a[rel='external']
 }
 a[rel='external'] i
 {
-    padding-left: 5px;
+    padding-left: 2px;
     padding-right: 2px;
 }
